# pravaha

./: .gitignore  CAUSAL_DAG_DEMONSTRATION.md  DELIVERABLES.md  FINAL_SUMMARY.txt  FORENSICS_QUICK_START.md  FRAMEWORK_SUMMARY.md  GRAPHS_INDEX.md  OPERATIONAL_INTEGRATION_ROADMAP.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FORENSICS.md  RUST_INTEGRATION.md  SEND_TO_ISRO.txt  STATUS.md  TESTING_SUMMARY.md  TEST_RESULTS.txt  VISUALIZATION_COMPLETE.md  VISUALIZATION_SUMMARY.md  benchmark.py  build_pdf.py  explaination.txt  main.py
analysis/: residual_analyzer.py
causal_graph/: DAG_DOCUMENTATION.md  INDEX.md  README.md  README_CAUSAL_DAG.md  __init__.py  d_separation.py  dag_visualization.py  graph_definition.py  interactive_dag_viz.py  root_cause_ranking.py  visualizer.py
data/: gsat6a_failure.csv  gsat6a_nominal.csv
docs/: 00_TABLE_OF_CONTENTS.md  01_INTRODUCTION.md  02_INSTALLATION.md  03_QUICKSTART.md  04_RUNNING_FRAMEWORK.md  05_CONFIGURATION.md  06_OUTPUT_INTERPRETATION.md  07_REAL_EXAMPLES.md  08_PHYSICS_FOUNDATION.md  10_API_REFERENCE.md  23_FAQ.md  BUILD_PDF.md  README.md
forensics/: __init__.py  gsat6a_forensic.py
gsat6a/: __init__.py  findings.py  forensics.py  live_simulation.py  live_simulation_main.py  mission_analysis.py  timeline.py  visualizer.py
operational/: README.md  __init__.py  (+1 more)
rust_core/: Cargo.toml  README.md
rust_core/src/: dropout_handler.rs  error.rs  hidden_state_inference.rs  kalman.rs  kalman_filter.rs  lib.rs  main.rs  measurement.rs  physics.rs  python_bindings.rs  state_estimate.rs
(+6 files in other folders)
